Change ipv6 mask to ipv6 prefix
Former-commit-id: 8a209466f3a71988ed9ba660acc3556445d16805 [formerly ac6b83a3f9e1972f4e3a25c06eea108801f08076 [formerly ca66640e5e7db43b92c3be5bcca809e6b84a4ec2]]
Former-commit-id: ac6b83a3f9e1972f4e3a25c06eea108801f08076
Former-commit-id: c51a98fb1915ed1b9422f70c87c5d75b0439968c

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/verifysettings/index.html.twig
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/verifysettings/index.html.twig
@@ -329,18 +329,18 @@
                      </tr>
                      <tr>
                         <td>
-                            <h2 {% if ipv6maskflag == true %}style="color: #F00"{% endif %}>
+                            <h2 {% if ipv6prefixflag == true %}style="color: #F00"{% endif %}>
                                 {% trans %}IPv6 Mask{% endtrans %}:
                             </h2>
                          </td>
                          <td>
                               <h2>
                                   {% if configipv6 == '1' %}
-                                      <a href="{{ path('textboxeditpage', {'edit': 'edit', 'slug': 'ipv6mask', '_locale': language}) }}">
-                                           {% if ipv6mask == '' %} 
+                                      <a href="{{ path('textboxeditpage', {'edit': 'edit', 'slug': 'ipv6prefix', '_locale': language}) }}">
+                                           {% if ipv6prefix == '' %} 
                                                {% trans %}Set IP Mask{% endtrans %}
                                            {% else %} 
-                                               {{ ipv6mask }}
+                                               {{ ipv6prefix }}
                                            {% endif %}
                                       </a>
                                   {% endif %}
