Add configuration logic
Former-commit-id: b3a980ec05ed735a978a7d74d8f237eda27ee1e9 [formerly 60518944535c4f9ca496e543d4c74d13a657b7f0]
Former-commit-id: 545c71f8fe486b9ad3460f7301636100f316f136

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/web/css/style.css
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/web/css/style.css
@@ -143,3 +143,16 @@ button[type="submit"]:hover {
 .center {
     text-align: center;
 }
+
+.progress-bar {
+   font-size: 24px;
+   padding: 3px;
+   color: #00D;
+   list-style: none;
+   background-color: #009;
+   border: solid 2px #000;
+   -webkit-border-radius: 15px;
+   -moz-border-radius: 15px;
+   border-radius: 15px;
+   text-align: center;
+}
