Reorder navigation buttons
Former-commit-id: b23780102951426299cae67102e8ecd220ecffc5

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/passwordbox/index.html.twig
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/passwordbox/index.html.twig
@@ -23,8 +23,13 @@
                 <div>
                     {{ form_widget(form.Passwordbox2) }}
                 </div>
-                {{ form_widget(form.Next) }}
-                {{ form_widget(form.Back) }} 
+                <div style="display:none">
+                    {{ form_widget(form.NextHidden) }}
+                </div>
+                <div style="display:block">
+                    {{ form_widget(form.Back) }}
+                    {{ form_widget(form.Next) }}
+                </div>
             </div>
             {{ form_end(form) }}
             <div class="error-container">
