--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/textbox/index.html.twig
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/textbox/index.html.twig
@@ -17,8 +17,13 @@
                 <div>
                     {{ form_widget(form.Textbox) }}
                 </div>
-                {{ form_widget(form.Next) }}
-                {{ form_widget(form.Back) }} 
+                <div style="display:none">
+                    {{ form_widget(form.NextHidden) }}
+                </div>
+                <div style="display:block">
+                    {{ form_widget(form.Back) }}
+                    {{ form_widget(form.Next) }}
+                </div>
             </div>
             {{ form_end(form) }}
             <div class="error-container">
