Add password comparison checks and default values
Former-commit-id: 4e776eda2b322feab71d259953f23c4ed4651b0e [formerly 9c702da6d1902a38e9dd2cfa9dffc227e9b84adb]
Former-commit-id: ae5b27dfbbabd510ad4fa08f47ec7a2c4bb11f08

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/passwordbox/index.html.twig
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/passwordbox/index.html.twig
@@ -24,6 +24,7 @@
                     {{ form_widget(form.Passwordbox2) }}
                 </div>
                 <div style="display:none">
+                    {{ form_widget(form.Passwordboxhidden) }}
                     {{ form_widget(form.NextHidden) }}
                 </div>
                 <div style="display:block">
