--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/passwordeditbox/index.html.twig
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/views/passwordeditbox/index.html.twig
@@ -23,6 +23,9 @@
                 <div>
                     {{ form_widget(form.Passwordbox2) }}
                 </div>
+                <div style="display:none">
+                    {{ form_widget(form.Passwordboxhidden) }}
+                </div>
                 {{ form_widget(form.Save) }}
             </div>
             {{ form_end(form) }}
