--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/public/css/style.css
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/public/css/style.css
@@ -110,6 +110,7 @@ select {
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
+    width: 310px;
 }
 
 input {
